style Anpassungen und js eingebunden

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                 </div>
                 <div id="container_rezept">
                     <div id="container_portionen">
-                        <label ><span id="label_portionen">Portionen:</span>
-                        <input id="input_portionen_anzahl" type="text" value="1">
-                        </label>
-                            
+                        <label id="label_input_portionen">
+                            <span id="label_portionen">Portionen:</span>
+                            <input id="input_portionen_anzahl" type="text" value="1"> 
+                        </label>                           
                     </div>
                     <div id="container_zutaten_anleitung">
                         <div id="container_zutaten">
@@ -97,11 +97,10 @@
                 </div>
             </div>
         </main>
+        <footer>
+
+        </footer>
+        <script src="/js/main.js"></script>
 
     </body>
-
-    <footer>
-
-    </footer>
-
 </html>
