Popup, Icons und Eventlistener hinzugefügt

--- a/index.html
+++ b/index.html
@@ -18,10 +18,31 @@
         </header>
 
         <main>
+            <div id="popup_background">
+                <div id="popup">
+                    <div id="pop_up_header">
+                        <h2>Allergene (und andere übernatürliche Gefahren):</h2>
+                        <img class="icon_size" id="icon_close" src="/resources/close.svg" alt="zusätzliche Informationen">
+                    </div>
+                    <div id="popup_allergene">
+                        <ul>
+                            <li><b>Chili (Stufe: Inferno)</b> - Kann spontane Feuerspeiendeeffekte verursachen. Feuerlöscher bereithalten!</li>
+                            <li><b>Ingwer</b> - Wirkt wie ein Jetpack für deinen Kreislauf. Zündet von innen!</li>
+                            <li><b>Kokosmilch</b> - Enthält Kokos. Überraschung! Kann Spuren von Palmenurlaub enthalten.</li>
+                            <li><b>Knoblauch</b> - Nicht allergen, aber garantiert vampirresistent.</li>
+                            <li><b>Mut</b> - Erforderlich in großen Mengen. Nicht für Zartbesaitete empfohlen.</li>
+                            <li><b>Drachenenergie (vermutlich Spuren enthalten)</b> - Nicht offiziell bestätigt, aber ... du wirst es merken.</li>
+                        </ul>
+                    </div>   
+                </div>
+            </div>
             
             <div id="container_beschreibung_rezept">
                 <div id="container_beschreibung">
-                        <h2>Drachenatem-Curry</h2>
+                        <div id="container_icon">
+                            <h2>Drachenatem-Curry</h2>
+                            <img class="icon_size" id="icon_info" src="/resources/info.svg" alt="zusätzliche Informationen">
+                        </div>
                         <article id="art_beschreibung">
                             Dieses Curry ist nicht nur für mutige Esser gemacht, sondern bringt dein Abendessen auf Hochtouren! Mit seiner
                             pikanten Chili-Note und dem wärmenden Ingwer wird jeder Bissen zu einer explosiven Geschmacksreise. Das
