Berechnung der einzelnen Mengen mit Hilfe von js

--- a/index.html
+++ b/index.html
@@ -64,35 +64,35 @@
                             <h3>Was du brauchst:</h3>
                             <table>
                                 <tr>
-                                    <td>Huhn</td>
+                                    <td class="td_zutaten">Huhn</td>
                                     <td class="td_menge">1Stk.</td>
                                 </tr>
                                 <tr>
-                                    <td>Currypulver</td>
+                                    <td class="td_zutaten">Currypulver</td>
                                     <td class="td_menge">10g</td>
                                 </tr>
                                 <tr>
-                                    <td>Kokosmilch</td>
+                                    <td class="td_zutaten">Kokosmilch</td>
                                     <td class="td_menge">250ml</td>
                                 </tr>
                                 <tr>
-                                    <td>Ingwer</td>
+                                    <td class="td_zutaten">Ingwer</td>
                                     <td class="td_menge">2ml</td>
                                 </tr>
                                 <tr>
-                                    <td>Zwiebel</td>
+                                    <td class="td_zutaten">Zwiebel</td>
                                     <td class="td_menge">1Stk.</td>
                                 </tr>
                                 <tr>
-                                    <td>Reis</td>
+                                    <td class="td_zutaten">Reis</td>
                                     <td class="td_menge">200g</td>
                                 </tr>
                                 <tr>
-                                    <td>Zitronensaft</td>
+                                    <td class="td_zutaten">Zitronensaft</td>
                                     <td class="td_menge">20ml</td>
                                 </tr>
                                 <tr>
-                                    <td>Chili</td>
+                                    <td class="td_zutaten">Chili</td>
                                     <td class="td_menge">0.5g</td>
                                 </tr>
                             </table>
