JSON eingebaut und die Zutaten aus der JSON Datei abgerufen

--- a/index.html
+++ b/index.html
@@ -121,6 +121,53 @@
         <footer>
 
         </footer>
+        <script id="zutaten_json" type="application/json">
+            {
+                "zutat":[
+                    {
+                        "zutatenart": "Huhn",
+                        "menge": 1,
+                        "einheiten": "Stk."
+                    },
+                    {
+                        "zutatenart": "Currypulver",
+                        "menge": 10,
+                        "einheiten": "g"
+                    },
+                    {
+                        "zutatenart": "Kokosmilch",
+                        "menge": 250,
+                        "einheiten": "ml"
+                    },
+                    {
+                        "zutatenart": "Ingwer",
+                        "menge": 2,
+                        "einheiten": "ml"
+                    },
+                    {
+                        "zutatenart": "Zwiebel",
+                        "menge": 1,
+                        "einheiten": "Stk."
+                    },
+                    {
+                        "zutatenart": "Reis",
+                        "menge": 200,
+                        "einheiten": "g"
+                    },
+                    {
+                        "zutatenart": "Zitronensaft",
+                        "menge": 20,
+                        "einheiten": "ml"
+                    },
+                    {
+                        "zutatenart": "Chili",
+                        "menge": 0.5,
+                        "einheiten": "g"
+                    }
+                    
+                ]
+            }
+        </script>
         <script src="/js/main.js"></script>
 
     </body>
